objects/Account.object
<CustomObject>
    <fields>
        <fullName>PayorID_del__c</fullName>
        <label>PayorID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payor ID</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payor_Parent__c</fullName>
        <label>Payor Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_CRO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Portal Account Type must be &apos;Site&apos;, not &apos;Company&apos;</inlineHelpText>
        <label>Pharma CRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharma_Co_Ref_Number__c</fullName>
        <label>Pharma Co Ref Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Portal_Account_Creation_Date__c</fullName>
        <label>Pharma Portal Account Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phelb_Name__c</fullName>
        <label>Phelb Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Account_Type__c</fullName>
        <label>Portal Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Portal_Site__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharma Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Name__c</fullName>
        <label>Practice Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Territory_Name__c</fullName>
        <description>Updated via Apex when Territory Name Changed</description>
        <label>Previous Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_of_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price of Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <description>Used to map Study ID on TRF&apos;s from Account level.</description>
        <label>Protocol #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_To_NetSuite_Date__c</fullName>
        <label>Push To NetSuite Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_To_TheraPak_Date__c</fullName>
        <label>Push To TheraPak Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Push_To_TheraPak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To TheraPak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_to_LabVantage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to push updated account information to LIMS and ERP for previously-qualified (but no longer qualified) accounts. Otherwise, use the &apos;Qualified?&apos; checkbox</description>
        <inlineHelpText>Use this instead of &apos;Qualified?&apos; to push updated account information to LIMS for previously-qualified (but no longer qualified) accounts.</inlineHelpText>
        <label>Push to LabVantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_to_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_to_send_to_LIMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger updated field. If there is one contact qualified, Account qualified</description>
        <inlineHelpText>Trigger updated field. If there is one contact qualified, Account qualified</inlineHelpText>
        <label>Qualified to send to LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <label>RSD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rec_Type_Id__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Rocky Mountain</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                    <isActive>false</isActive>
                    <label>Mid-Atlantic</label>
                </value>
                <value>
                    <fullName>Midsouth</fullName>
                    <isActive>false</isActive>
                    <label>Midsouth</label>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                    <isActive>false</isActive>
                    <label>Midwest</label>
                </value>
                <value>
                    <fullName>West</fullName>
                    <isActive>false</isActive>
                    <label>West</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from AE&apos;s manager</inlineHelpText>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Director__c</fullName>
        <label>Regional Sales Director</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leeann Barlow</fullName>
                </value>
                <value>
                    <fullName>Fernando Colin</fullName>
                </value>
                <value>
                    <fullName>Matt Daniel</fullName>
                </value>
                <value>
                    <fullName>Andy Ecklund</fullName>
                </value>
                <value>
                    <fullName>Justin Elders</fullName>
                </value>
                <value>
                    <fullName>Karen Kilsdonk</fullName>
                </value>
                <value>
                    <fullName>Dave Liebetreu</fullName>
                </value>
                <value>
                    <fullName>Maria Stravato</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Thompson</fullName>
                </value>
                <value>
                    <fullName>Alicia Madison</fullName>
                    <isActive>false</isActive>
                    <label>Alicia Madison</label>
                </value>
                <value>
                    <fullName>Charles Truan</fullName>
                    <isActive>false</isActive>
                    <label>Charles Truan</label>
                </value>
                <value>
                    <fullName>Danielle Usilton</fullName>
                    <isActive>false</isActive>
                    <label>Danielle Usilton</label>
                </value>
                <value>
                    <fullName>James Azzaro</fullName>
                    <isActive>false</isActive>
                    <label>James Azzaro</label>
                </value>
                <value>
                    <fullName>Karen Burns</fullName>
                    <isActive>false</isActive>
                    <label>Karen Burns</label>
                </value>
                <value>
                    <fullName>Kim Forte</fullName>
                    <isActive>false</isActive>
                    <label>Kim Forte</label>
                </value>
                <value>
                    <fullName>MidAtlantic RSD - OPEN</fullName>
                    <isActive>false</isActive>
                    <label>MidAtlantic RSD - OPEN</label>
                </value>
                <value>
                    <fullName>Steven Collora</fullName>
                    <isActive>false</isActive>
                    <label>Steven Collora</label>
                </value>
                <value>
                    <fullName>Trista Hughes</fullName>
                    <isActive>false</isActive>
                    <label>Trista Hughes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_MD__c</fullName>
        <label>Requesting MD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <formula>$UserRole.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCRUM_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this account is for the LC-SCRUM Study.</inlineHelpText>
        <label>SCRUM Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEC_Active_Notification_Date__c</fullName>
        <label>SEC Active Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEC_Termination_Notification_Date__c</fullName>
        <label>SEC Termination Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOW</label>
        <referenceTo>SOW__c</referenceTo>
        <relationshipLabel>Site Accounts</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Ohio Valley</fullName>
                </value>
                <value>
                    <fullName>West Lakes</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Philly</fullName>
                </value>
                <value>
                    <fullName>Carolinas</fullName>
                </value>
                <value>
                    <fullName>N. Florida</fullName>
                </value>
                <value>
                    <fullName>SE Florida</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West Coast</fullName>
                </value>
                <value>
                    <fullName>Nor Cal</fullName>
                </value>
                <value>
                    <fullName>Pacific Northwest</fullName>
                </value>
                <value>
                    <fullName>Upper West</fullName>
                </value>
                <value>
                    <fullName>North Tex</fullName>
                </value>
                <value>
                    <fullName>Plains</fullName>
                </value>
                <value>
                    <fullName>South Tex</fullName>
                </value>
                <value>
                    <fullName>Desert</fullName>
                </value>
                <value>
                    <fullName>Mountain South</fullName>
                </value>
                <value>
                    <fullName>So Cal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contract</label>
        <referenceTo>Sales_Contract__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Alert_21_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Alert 21 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_FAX__c</fullName>
        <label>Secondary FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Seconds_Since_Push_Request__c</fullName>
        <formula>(NOW() - Push_To_TheraPak_Date__c) *24*60*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds Since Push Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_LIMS__c</fullName>
        <description>Timestamp last SQS message sent to LIMS</description>
        <label>Sent to LIMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Frequency__c</fullName>
        <label>Shipment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Weeks</fullName>
                </value>
                <value>
                    <fullName>4 Weeks</fullName>
                </value>
                <value>
                    <fullName>5 Weeks</fullName>
                </value>
                <value>
                    <fullName>6 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Country_Non_US__c</fullName>
        <description>Send blank to TheraPak for US</description>
        <formula>IF(ShippingCountry &lt;&gt; &apos;US&apos;, ShippingCountry, &apos;&apos;)</formula>
        <label>Shipping Country Non-US</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <label>Shipping Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <label>Shipping Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <inlineHelpText>Used for Therapak tracking</inlineHelpText>
        <label>Site #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Account__c</fullName>
        <label>Special Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mirati: MGDC516-001</fullName>
                </value>
                <value>
                    <fullName>Mirati: MGCD265-109</fullName>
                </value>
                <value>
                    <fullName>SWOG:1403</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Biopharma Company that is sponsoring drug study</inlineHelpText>
        <label>Sponsor Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This must be a Biopharma account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>01234000000HoYe</value>
            </filterItems>
            <infoMessage>Select the sponsoring Biopharma company (must be Biopharma record type)</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Sites</relationshipLabel>
        <relationshipName>Biopharma_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stark_Account_Spend__c</fullName>
        <inlineHelpText>Total account spend for all associated contacts</inlineHelpText>
        <label>Stark Account Spend</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Targeting</fullName>
                </value>
                <value>
                    <fullName>Capabilities</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TBC4DELETION__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accounts Considered for Deletion, Not 2017-159 Customer, Account is Not NCCN/NCI and Is Not a Master Account. Has Contact(s), No Contact Affiliation, No Activity History in the past 90 Days to  2 years,</inlineHelpText>
        <label>TBC4DELETION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TBD_To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Considered for Deletion: Not a 2017 159 Customer, Not a NCCN or NCI Account, Account has No Contacts (or) has Contacts, However No Activity History in over 6 months.</inlineHelpText>
        <label>TBD -To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Account_Priority__c</fullName>
        <label>Targeted Account Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targets_of_Interest__c</fullName>
        <label>Targets of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <description>Territory name updated through custom code</description>
        <inlineHelpText>Territory name updated through custom code based on active assigned territory</inlineHelpText>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region__c</fullName>
        <description>Parent Territory Region updated via Apex</description>
        <inlineHelpText>Parent Territory Region updated via Apex</inlineHelpText>
        <label>Territory Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheraPak_Account_Name__c</fullName>
        <label>TheraPak Account Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheraPak_Status__c</fullName>
        <label>TheraPak Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Sent</fullName>
                    <default>true</default>
                    <label>Never Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount_Spend__c</fullName>
        <description>Created by DLRS</description>
        <label>Total Amount Spend</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_ID__c</fullName>
        <label>Trial ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Number__c</fullName>
        <label>Trial Site Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Territory__c</fullName>
        <inlineHelpText>Picklist. Use &apos;Territory Name&apos; instead</inlineHelpText>
        <label>US Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta N</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boroughs</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Charleston</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>North Chicago</fullName>
                    <label>Chicago N</label>
                </value>
                <value>
                    <fullName>Chicago S</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Manhattan</fullName>
                </value>
                <value>
                    <fullName>Memphis</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Naples</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Newark</fullName>
                </value>
                <value>
                    <fullName>New Orleans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <description>NS:07/02/18 This formula field displays the Top parent account name.</description>
        <formula>IF( 
  /* No Parent - orphaned or it is its own parent */
  LEN(Parent.Name)&lt;1 
  ,HYPERLINK(&quot;/&quot;&amp;Id, Name,&quot;_parent&quot;)
  ,IF( 
    /* Parent Level 1 */
    LEN(Parent.Parent.Name )&lt;1
    ,HYPERLINK(&quot;/&quot;&amp;Parent.Id,Parent.Name,&quot;_parent&quot;)
    ,IF(
      /* Parent Level 2 */
      LEN(Parent.Parent.Parent.Name )&lt;1 
      ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Id,Parent.Parent.Name,&quot;_parent&quot;)
      ,IF(
        /* Parent Level 3 */
        LEN(Parent.Parent.Parent.Parent.Name )&lt;1
        ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Id,Parent.Parent.Parent.Name,&quot;_parent&quot;)
        ,IF(
          /* Parent Level 4 */
          LEN(Parent.Parent.Parent.Parent.Parent.Name )&lt;1
          ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;)
          ,IF(
            /* Parent Level 5 */
            LEN(Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
            ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;)
            ,IF(
              /* Parent Level 6 */
              LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
              ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;)
              ,IF(
                /* Parent Level 7 */
                LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
                ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;)
                ,IF(
                  /* Parent Level 8 */
                  LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
                  ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;)
                    ,&quot;Ultimate Parent Beyond 8 Levels&quot;
                  )
                )
              )
            )
          )
        )
      )
    )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_by_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unqualified by CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VID_Match_Source__c</fullName>
        <label>VID Match Source</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIS_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account in Merck VISION Study</description>
        <inlineHelpText>Check this box only if this account is in the Merck VISION Study. The account name should start with &apos;VIS#___&apos;.</inlineHelpText>
        <label>VIS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vanguard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vanguard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veeva_ID__c</fullName>
        <externalId>true</externalId>
        <label>Veeva ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Timepoints__c</fullName>
        <label>Visit Timepoints</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baseline   C3D1   Progression</fullName>
                    <label>Baseline  C3D1  Progression</label>
                </value>
                <value>
                    <fullName>Prospective Retrospective (RESL)</fullName>
                    <label>Prospective   Retrospective (RESL)</label>
                </value>
                <value>
                    <fullName>Screening End of Treatment</fullName>
                </value>
                <value>
                    <fullName>BL     5w     6m     12m     18m     2y     3y     4y     5y</fullName>
                </value>
                <value>
                    <fullName>Study ID: BLU285</fullName>
                </value>
                <value>
                    <fullName>Screening  |:|  (RESL) - Cycle 3 :: Cycle 5 :: Cycle 7 :: Cycle 9 :: End of treatment :: Other</fullName>
                </value>
                <value>
                    <fullName>Screening   D42   Post-SX</fullName>
                </value>
                <value>
                    <fullName>Treatment-naive         Previously Treated</fullName>
                    <label>Treatment-naive            Previously Treated</label>
                </value>
                <value>
                    <fullName>screening, C1D15, CxD1 and EOT</fullName>
                    <label>Screening, C1D15, CxD1 and EOT</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2014_AACR_Notes__c</fullName>
        <label>2014 AACR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2014_AACR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 AACR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_ASCO_Notes__c</fullName>
        <label>2014 ASCO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2014_ASCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 ASCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_AACR_Notes__c</fullName>
        <label>2015 AACR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2015_AACR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 AACR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_ASCO_Notes__c</fullName>
        <label>2015 ASCO Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>